<resources>
    <string name="app_name">PokeMonitor</string>
    <string name="defense">Defense</string>
    <string name="attack">Attack</string>
    <string name="hp">HP</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="type">Type</string>
    <string name="name">Name</string>
    <string name="image_description">Pokemon image</string>
</resources>
